feat: adds Postgres database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
-spring.application.name=nhl
+spring.application.name=nhlexplore
 spring.http.converters.preferred-json-mapper=gson
+
+spring.profiles.active=dev
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/nhlexplore
+spring.datasource.username=nhlexplore
+spring.datasource.password=localsecret
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
